test/spec_vectors/data/ok/module_25.wat
(module (import "spectest" "memory" (memory 0)) (data (i32.const 1) "a"))