test/spec_vectors/data/fail/module_54.wat
(module (memory 1) (data (offset (i32.const 0) (i32.const 0))))